--- a/src/index.css
+++ b/src/index.css
@@ -241,7 +241,7 @@ a.btn:hover {
 }
 
 .sponsors a {
-  margin: 0 20px;
+  margin: 30px 20px;
   transition: all .2s ease-in-out;
 }
 
@@ -277,6 +277,16 @@ footer .socials li:hover {
 footer .socials li img {
   height: calc(1.25 * var(--base-unit-2));
   width: auto;
+}
+
+@media screen and (max-width: 1000px) {
+  body {
+    margin: 0px 10%;
+  }
+
+  .sponsors {
+    flex-direction: column;
+  }
 }
 
 
